c4prj2_input/grade.txt
Grading at Thu Mar 11 16:25:19 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:41:15: error: comparison with string literal results in unspecified behavior [-Werror=address]
     if (input == "\n"){continue;}
               ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
